[tool.poetry]
name = "highrise-bot-sdk"
version = "23.1.0.b5"
description = "The Highrise Bot SDK, for running Highrise bots written in Python."
authors = ["Pocket Worlds Inc <server@high.rs>"]
license = "proprietary"
readme = "README.md"
packages = [{include = "highrise", from = "src"}]


[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">= 3.8.4"
click = ">= 8.1.3"
cattrs = "^22.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"


[tool.poetry.scripts]
highrise = "highrise.__main__:run"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "src/highrise/_unions.py"
allow_redefinition = true
check_untyped_defs = true
namespace_packages = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_incomplete_defs = true
strict_equality = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
